--- a/android/project.properties
+++ b/android/project.properties
@@ -14,3 +14,4 @@
 target=android-22
 android.library.reference.1=../../google-play-services_lib
 android.library.reference.2=../../SwarmConnect
+manifestmerger.enabled=true
